Bug 488783 - Tags list no longer sorted (alphabetized) in latest Shiretoko nightly, r=dietrich a=blocking191